# decentralized_decision

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  build.sh  build_simple.sh
.github/workflows/: security.yml
config/: config.toml  performance.toml
src/contracts/: Cargo.toml
src/contracts/src/: cw20_token.rs  cw721_nft.rs  lib.rs  types.rs  voting_contract.rs
src/ipfs/: Cargo.toml
src/ipfs/src/: client.rs  lib.rs  storage.rs  types.rs
src/sdk/: Cargo.toml
src/sdk/src/: client.rs  lib.rs  types.rs  utils.rs
src/server/: COMPILATION_STATUS.md  Cargo.toml  LARGE_FILES_ANALYSIS.md  LOTTERY_LEVELS_ANALYSIS.md  LOTTERY_LEVELS_REFACTORING_PLAN.md  README.md  REFACTORING_SUMMARY.md  SPLIT_STATUS.md
src/server/src/: errors.rs  lib.rs  lottery_config.rs  lottery_levels.rs  main.rs  nft_types.rs  selection_algorithms.rs  serial_numbers.rs  state.rs  types.rs  utils.rs
src/server/src/core/: audit.rs  cache.rs  concurrency.rs  iagent.rs  lottery_config.rs  mod.rs  nft_types.rs  participants.rs  performance.rs  quality.rs  scoring.rs  security.rs  selection_algorithms.rs  serial_numbers.rs  session.rs  storage_strategy.rs  stress_testing.rs  verification.rs  voting_lifecycle.rs  voting_sdk.rs
src/server/src/core/lottery_levels/: configurator.rs  executor.rs  manager.rs  mod.rs  participant.rs  types.rs  validator.rs
src/server/src/routes/: audit.rs  benchmark.rs  cache.rs  health.rs  ipfs_cache.rs  ipfs_ext.rs  levels.rs  lottery_config.rs  mod.rs  nft_ownership.rs  nft_state.rs  nft_types.rs  performance.rs  permissions.rs  qualification.rs  serials.rs  stake_events.rs  staking.rs  state_metrics.rs  sync.rs  tools.rs  upload.rs  verification.rs  voting.rs  voting_lifecycle.rs  voting_sdk.rs
src/server/src/tests/: integration_tests.rs  mod.rs  test_helpers.rs  unit_tests.rs
src/server/tests/: basic.rs  mod.rs  phase3_perf.rs  phase5_integration.rs
src/wasm/: Cargo.toml
src/wasm/src/: commitment.rs  crypto.rs  lib.rs  types.rs  utils.rs  voting.rs
