[workspace]
members = [
    "src/wasm",
    "src/contracts",
    "src/server",
    "src/sdk",
    "src/ipfs"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Luckee DAO Team"]
description = "基于比特承诺模型的去中心化投票系统"
license = "MIT"
repository = "https://github.com/luckee-dao/decentralized_decision"

[workspace.dependencies]
# 核心依赖
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 密码学依赖
sha2 = "0.10"
rand = "0.8"
ed25519-dalek = "2.0"
aes-gcm = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"

# WebAssembly依赖
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# 区块链依赖
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cosmwasm-storage = "1.4"
cw-storage-plus = "1.2"
cw2 = "1.1"

# 测试工具（用于合约多合一测试环境）
cw-multi-test = "1.1"

# HTTP服务器依赖
warp = "0.3"
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# 配置管理
config = "0.13"
dotenv = "0.15"

# 测试依赖
criterion = "0.5"
fake = "2.9"

# IPFS依赖
ipfs-http-client = "0.19"

# 监控和指标
prometheus = "0.13"
metrics = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true
